   6-Oct-2019    V0.22 Make the content extracted subject to an API control to avoid Azure testing issues
  12-Oct-2019    V0.23 Add method SiftsSummaryProvider.getLongestAlignments()
  16-Oct-2019    V0.24 Address variable record length in reading SIFTS GO data.
  16-Oct-2019    V0.25 Update handling of secondary reference assignment mapping
  17-Oct-2019    V0.26 Include taxonomy with accession code mapping
  23-Nov-2019    V0.27 Move pipeline to py38
   6-Dec-2019    V0.28 Add rebuildMatchResultIndex() to refresh the match index.
   9-Dec-2019    V0.29 Add reformat method to support ExDB schema spec.
  14-Dec-2019    V0.30 Add method to provide unique UniProt accessions.
  15-Dec-2019    V0.31 Add method to provide unique UniProt accessions for an entry subset
  16-Dec-2019    V0.32 Correction in parser for feature sequence positions
  16-Dec-2019    V0.33 Improved error handling for failed fetches.
  16-Dec-2019    V0.34 Suppress tracebacks for some connection issues.
   3-Feb-2020    V0.35 Update dependencies
   4-Feb-2020    V0.36 Add stricter tests for failed lookup requests.
   8-Feb-2020    V0.37 Add independent tests for failover, expose more parameter
                       controls to public methods.
  13-Feb-2020    V0.38 Add further uniqueness checks in reformatting Uniprot features.
  18-Feb-2020    V0.39 Add Pfam and InterPro annotation providers
  18-Feb-2020    V0.40 Handle encoding issues for Py27
   5-Apr-2020    V0.41 Adjust logging details for UniProt fetchlist
  20-Jun-2020    V0.42 Add method fetchSequenceList() to fetch fasta sequences
  22-Jun-2020    V0.43 Add methods to return SeqAlign() from SIFTS data.
  23-Aug-2020    V0.43 Adjust InterPro ftp URL references.
   9-Oct-2020    V0.44 Add organism host taxonomy
  24-Oct-2020    V0.46 Adjust tests to handle Ubuntu 20.04 issues
  30-Nov-2020    V0.47 add UniProtIdMappingProvider() and tests.
   1-Dec-2020    V0.48 make UniProtIdMappingProvider() a singleton.